Add meta data and footer changes

--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AB Trade School</title>
+    <title>Free Stock Market Courses Online for Beginners | Trade School</title>
+    <meta
+      name="description"
+      content="Start your trading journey with free stock market courses for beginners at Alice Blue Trade School. Learn investing, trading basics, and more from experts."
+    />
   </head>
   <body>
     <div id="root"></div>
