--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="preload"
+      as="image"
+      href="/src/assets/signupImg.webp"
+      decoding="async"
+      type="image/webp"
+      fetchpriority="high"
+    />
     <title>Free Stock Market Courses Online for Beginners | Trade School</title>
     <meta
       name="description"
