--- a/index.html
+++ b/index.html
@@ -17,9 +17,45 @@
       name="description"
       content="Start your trading journey with free stock market courses for beginners at Alice Blue Trade School. Learn investing, trading basics, and more from experts."
     />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, user-scalable=no"
+    />
+    <style>
+      #lsq-chatbot {
+        position: fixed;
+        z-index: 99999;
+        border: none;
+      }
+      .chatbot-opened {
+        height: min(70vh, 586px) !important;
+      }
+      @media only screen and (max-width: 768px) {
+        .chatbot-opened {
+          position: fixed;
+          height: 100% !important;
+          width: 100% !important;
+          max-width: 100% !important;
+          bottom: 0 !important;
+          right: 0 !important;
+          left: 0 !important;
+          top: 0 !important;
+        }
+      }
+    </style>
+    <script
+      type="text/javascript"
+      src="https://linkprotect.cudasvc.com/url?a=https%3a%2f%2flsqbot.converse.leadsquared.com%2fbot-script.js&c=E,1,iesytLv-F9Y61VIQ4CZjA6LiIbfSGkIWdEnbL6cT1t9YxyW4RF7v4gFiz6icX63tyAcET3ifkftOAKj_Qdx69VI-hzovTDLu2ARgRM44&typo=1"
+    ></script>
   </head>
   <body>
     <div id="root"></div>
+    <iframe
+      style="bottom: 15px; right: 10px"
+      id="lsq-chatbot"
+      allow="autoplay"
+      src="https://linkprotect.cudasvc.com/url?a=https%3a%2f%2fbotweb.converse.leadsquared.com%2f%3fbotId%3d1926%26tenantId%3d49317%26type%3dWEB%26channelId%3de566aaf7-d0f7-44db-bfae-68a391878a31&c=E,1,_PsS5yvopN8Df6nG9rue3XKrpUcn4AhU8AQZtGFkQEdZLWHBjIWOSYtSetU8X2qWf3Hp998OWpvwoOvolxDJKnujWubzN27i45tpHvAoBMI,&typo=1"
+    ></iframe>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
